Error Mitigation/MagiCoder/Data/javax_accessibility/javax_accessibilityOutputResult.txt
Sample: AccessibleContext_2
----------------------------------------------------------------
output:
./Data/javax_accessibility/javaFiles/AccessibleContext_2.java:6: error: <anonymous AccessibleContext_2$1> is not abstract and does not override abstract method getLocale() in AccessibleContext
        AccessibleContext context = new AccessibleContext() {
                                                            ^
1 error


================================================================

Sample: AccessibleContext_4
----------------------------------------------------------------
output:
./Data/javax_accessibility/javaFiles/AccessibleContext_4.java:7: error: <anonymous AccessibleContext_4$1> is not abstract and does not override abstract method getLocale() in AccessibleContext
        AccessibleContext context = new AccessibleContext() {
                                                            ^
./Data/javax_accessibility/javaFiles/AccessibleContext_4.java:13: error: <anonymous AccessibleContext_4$1$1> is not abstract and does not override abstract method getSelectedText() in AccessibleText
                return new AccessibleText() {
                                            ^
./Data/javax_accessibility/javaFiles/AccessibleContext_4.java:29: error: cannot find symbol
        System.out.println(text.getText(0, text.getEndIndex()));
                                               ^
  symbol:   method getEndIndex()
  location: variable text of type AccessibleText
3 errors


================================================================

Sample: AccessibleContext_5
----------------------------------------------------------------
output:
./Data/javax_accessibility/javaFiles/AccessibleContext_5.java:6: error: <anonymous AccessibleContext_5$1> is not abstract and does not override abstract method getLocale() in AccessibleContext
        AccessibleContext context = new AccessibleContext() {
                                                            ^
1 error


================================================================

Sample: AccessibleRelationSet_1
----------------------------------------------------------------
output:
./Data/javax_accessibility/javaFiles/AccessibleRelationSet_1.java:7: error: no suitable constructor found for AccessibleRelation(no arguments)
        AccessibleRelation relation = new AccessibleRelation();
                                      ^
    constructor AccessibleRelation.AccessibleRelation(String) is not applicable
      (actual and formal argument lists differ in length)
    constructor AccessibleRelation.AccessibleRelation(String,Object) is not applicable
      (actual and formal argument lists differ in length)
    constructor AccessibleRelation.AccessibleRelation(String,Object[]) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

Sample: AccessibleRelationSet_2
----------------------------------------------------------------
output:
./Data/javax_accessibility/javaFiles/AccessibleRelationSet_2.java:7: error: method add in class AccessibleRelationSet cannot be applied to given types;
        relationSet.add(/* some relation */);
                   ^
  required: AccessibleRelation
  found:    no arguments
  reason: actual and formal argument lists differ in length
./Data/javax_accessibility/javaFiles/AccessibleRelationSet_2.java:8: error: method add in class AccessibleRelationSet cannot be applied to given types;
        relationSet.add(/* some relation */);
                   ^
  required: AccessibleRelation
  found:    no arguments
  reason: actual and formal argument lists differ in length
2 errors


================================================================

Sample: AccessibleRelationSet_5
----------------------------------------------------------------
output:
./Data/javax_accessibility/javaFiles/AccessibleRelationSet_5.java:7: error: no suitable constructor found for AccessibleRelation(no arguments)
        AccessibleRelation relation = new AccessibleRelation();
                                      ^
    constructor AccessibleRelation.AccessibleRelation(String) is not applicable
      (actual and formal argument lists differ in length)
    constructor AccessibleRelation.AccessibleRelation(String,Object) is not applicable
      (actual and formal argument lists differ in length)
    constructor AccessibleRelation.AccessibleRelation(String,Object[]) is not applicable
      (actual and formal argument lists differ in length)
./Data/javax_accessibility/javaFiles/AccessibleRelationSet_5.java:13: error: incompatible types: AccessibleRelation cannot be converted to String
        if (relationSet.contains(relation)) {
                                 ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors


================================================================

Sample: AccessibleStateSet_3
----------------------------------------------------------------
output:
./Data/javax_accessibility/javaFiles/AccessibleStateSet_3.java:6: error: cannot find symbol
        stateSet.add(AccessibleStateSet.State.ACTIVE);
                                       ^
  symbol:   variable State
  location: class AccessibleStateSet
./Data/javax_accessibility/javaFiles/AccessibleStateSet_3.java:7: error: cannot find symbol
        stateSet.add(AccessibleStateSet.State.CHECKED);
                                       ^
  symbol:   variable State
  location: class AccessibleStateSet
2 errors


================================================================

